chore: add hacky changes
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>